--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/logo.png">
     <title>app</title>
 </head>
 <body>
@@ -45,6 +46,15 @@
             </div>
         </div>
         <div id="triangle2"></div>
+    </div>
+    <div class="preminibar">
+        <div id="triangle3"></div>
+        <div class="minibar">
+            <img title="clear" class="miniicons" id="clear" src="img/clear.png">
+            <img title="daytheme" class="miniicons" id="daytheme" src="img/daytheme.png">
+            <img title="nighttheme" class="miniicons" id="nighttheme" src="img/nighttheme.png">
+        </div>
+        <div id="triangle4"></div>
     </div>
     <div class="communicats">
         <div class="communicatw">
